traefik-ingress/kubernetes-dashboard-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: k8s-dashboard-ui.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
